--- a/Dueasy_v2/Resources/en.lproj/Localizable.strings
+++ b/Dueasy_v2/Resources/en.lproj/Localizable.strings
@@ -663,6 +663,7 @@
 "subscription.manageInAppStore" = "Manage in App Store";
 "subscription.cancelSubscription" = "Cancel Subscription";
 "subscription.cancelFooter" = "To cancel or modify your subscription, use the App Store settings. Changes will take effect at the end of the current billing period.";
+"subscription.comingSoon" = "Premium subscriptions are coming soon. Stay tuned!";
 
 // MARK: - Home Screen (Glance Dashboard)
 
